* Dec 29 2000 hship

Savage Refactoring!
IApplication -> IEngine, com.primix.tapestry.app -> com.primix.tapestry.engine
Fix many out of date Javadoc comments.
Improve exception handling/reporting in ApplicationServlet.
Add the engineClassName property to the ApplicationSpecification, update the DTD and
the SpecificationParser.
Have the ApplicationServlet construct the engine from the class name.

* Dec 28 2000 hship

Woops!  Moved the logic for creating the visit object to AbstractApplication.

* Dec 28 2000 hship

Change SimpleApplication to create the visit object based on a class specified in the application specification.

* Dec 28 2000 hship

Restructure RadioGroup and Radio slightly, to make them work (combined) more like a 
PropertySelection.
No longer use j2ee.jar, use a combination of javax.servlet.jar from Jetty's distribution,
and lib/ext/ejb.jar from the jBoss distribution.

* Dec 27 2000 hship

Change IBinding.getBoolean() to sniff for array types and return true if the length
is non-zero.

* Dec 26 2000 hship

Create a re-usable threadsafe Pool component and use it, instead of ad-hoc code,
to handle pooled Pages.

* Dec 21 2000 hship

Create a special case in PageRecorder for converting EJB references to handles for
storage and vice-versa when the page is restored.
Fix a previously unnoticed problem caused by bad timing in the interaction between
committing page changes and lazy creation of persistent page properties.
Add new checks to the PageRecorder to detect when a persistent property changes during page rendering.

* Dec 21 2000 hship

Attempt a few minor optimizations related to PropertyHelper and PropertyBinding.


* Dec 20 2000 hship

Update the documentation.
Make sure the visit object is created only when needed.

* Dec 20 2000 hship

Add the FieldLabel component, used for providing a label for validating text fields.
 
* Dec 19 2000 hship

Fix a typo that broke the Rollover component.

* Dec 19 2000 hship
